;**********************************************************************************************;
;*                                                                                            *;
;* This file is part of ocithare: a commandline password manager                              *;
;* Copyright (C) 2023 Yves Ndiaye                                                             *;
;*                                                                                            *;
;* ocithare is free software: you can redistribute it and/or modify it under the terms        *;
;* of the GNU General Public License as published by the Free Software Foundation,            *;
;* either version 3 of the License, or (at your option) any later version.                    *;
;*                                                                                            *;
;* ocithare is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;      *;
;* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR           *;
;* PURPOSE.  See the GNU General Public License for more details.                             *;
;* You should have received a copy of the GNU General Public License along with ocithare.     *;
;* If not, see <http://www.gnu.org/licenses/>.                                                *;
;*                                                                                            *;
;**********************************************************************************************;

(rule
 (with-stdout-to
  cithare.1
  (run %{bin:cithare} --help=groff)))

(install
 (section man)
 (files cithare.1))

(rule
 (with-stdout-to
  cithare-init.1
  (run %{bin:cithare} init --help=groff)))

(install
 (section man)
 (files cithare-init.1))

(rule
 (with-stdout-to
  cithare-add.1
  (run %{bin:cithare} add --help=groff)))

(install
 (section man)
 (files cithare-add.1))

(rule
 (with-stdout-to
  cithare-delete.1
  (run %{bin:cithare} delete --help=groff)))

(install
 (section man)
 (files cithare-delete.1))

(rule
 (with-stdout-to
  cithare-export.1
  (run %{bin:cithare} export --help=groff)))

(install
 (section man)
 (files cithare-export.1))

(rule
 (with-stdout-to
  cithare-show.1
  (run %{bin:cithare} show --help=groff)))

(install
 (section man)
 (files cithare-show.1))

(rule
 (with-stdout-to
  cithare-generate-password.1
  (run %{bin:cithare} generate-password --help=groff)))

(install
 (section man)
 (files cithare-generate-password.1))
