;**********************************************************************************************;
;*                                                                                            *;
;* This file is part of ocithare: a commandline password manager                              *;
;* Copyright (C) 2023 Yves Ndiaye                                                             *;
;*                                                                                            *;
;* ocithare is free software: you can redistribute it and/or modify it under the terms        *;
;* of the GNU General Public License as published by the Free Software Foundation,            *;
;* either version 3 of the License, or (at your option) any later version.                    *;
;*                                                                                            *;
;* ocithare is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;      *;
;* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR           *;
;* PURPOSE.  See the GNU General Public License for more details.                             *;
;* You should have received a copy of the GNU General Public License along with ocithare.     *;
;* If not, see <http://www.gnu.org/licenses/>.                                                *;
;*                                                                                            *;
;**********************************************************************************************;

(library
 (name libcithare)
 (libraries yojson cryptokit xdg dune-build-info)
 (preprocess
  (pps ppx_deriving_yojson)))
