;**********************************************************************************************;
;*                                                                                            *;
;* This file is part of ocithare: a commandline password manager                              *;
;* Copyright (C) 2023 Yves Ndiaye                                                             *;
;*                                                                                            *;
;* ocithare is free software: you can redistribute it and/or modify it under the terms        *;
;* of the GNU General Public License as published by the Free Software Foundation,            *;
;* either version 3 of the License, or (at your option) any later version.                    *;
;*                                                                                            *;
;* ocithare is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;      *;
;* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR           *;
;* PURPOSE.  See the GNU General Public License for more details.                             *;
;* You should have received a copy of the GNU General Public License along with ocithare.     *;
;* If not, see <http://www.gnu.org/licenses/>.                                                *;
;*                                                                                            *;
;**********************************************************************************************;

(include_subdirs no)

(data_only_dirs build)

(rule
 (enabled_if
  (= %{system} macosx))
 (deps
  (source_tree build))
 ; (targets libmacos.a libmacos.dylib libmacos.o)
 (targets libmacos.o)
 (action
  (no-infer
   (progn
    (chdir
     build
     (run make))
    ; (copy build/libmacos.a libmacos.a)
    ; (copy build/libmacos.dylib libmacos.dylib)
    (copy build/caml_macos.o libmacos.o)))))

(library
 (name macos)
 (extra_objects libmacos)
 (c_library_flags
  (-framework Foundation)
  (-framework AppKit))
 (enabled_if
  (= %{system} macosx)))
